# gst-openmax-dm81xx

./: ChangeLog  Makefile.am  README  configure.ac
build-aux/: git-version-gen
ext/: Makefile
omx/: Makefile.am  gstomx.c  gstomx.h  gstomx_aacdec.c  gstomx_aacdec.h  gstomx_aacenc.c  gstomx_aacenc.h  gstomx_adpcmdec.c  gstomx_amrnbdec.c  gstomx_amrnbenc.c  gstomx_amrwbdec.c  gstomx_amrwbenc.c  gstomx_base_audiodec.c  gstomx_base_audiodec.h  gstomx_base_ctrl.c  gstomx_base_ctrl.h  gstomx_base_filter.c  gstomx_base_filter.h  gstomx_base_filter2.c  gstomx_base_filter2.h  gstomx_base_filter21.c  gstomx_base_filter21.h  gstomx_base_sink.c  gstomx_base_sink.h  gstomx_base_src.c  gstomx_base_src.h  gstomx_base_vfpc.c  gstomx_base_vfpc.h  gstomx_base_vfpc2.c  gstomx_base_vfpc2.h  gstomx_base_videodec.c  gstomx_base_videodec.h  gstomx_base_videoenc.c  gstomx_base_videoenc.h  gstomx_buffertransport.c  gstomx_buffertransport.h  gstomx_camera.c  gstomx_camera.h  gstomx_core.c  gstomx_core.h  (+60 more)
omx/headers/: omx_vswmosaic.h
patches/: 0001_add_GstQueryBuffers_query.patch  0002_gstevent_add_crop_event.patch  0003_rowstride.patch  0004_add_support_to_replace_PadTemplates.patch  0005_correct_postion_to_get_info_from_sps.patch  README
tests/: cameratest.py
tests/standalone/: core.c
util/: async_queue.c  async_queue.h  sem.c
